added text box components with validation

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
         justify-content: center; /* Center horizontally */
         align-items: center;
 
-        color: #f57979; font-family: 'Raleway',sans-serif;
+        color: #ffadad; font-family: 'Raleway',sans-serif;
         font-size: 40px;
         font-weight: 800;
         line-height: 32px;
