--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@
         background-repeat: no-repeat;
         width: 100vw;
         height: 100vh;
+        overflow: hidden;
     }
 
     #header{
