completely overhauled the project and adapted it for multiple screens

--- a/src/styles/Login_screen_style.css
+++ b/src/styles/Login_screen_style.css
@@ -1,7 +1,7 @@
 @media (min-width: 1025px){
     .main_box {
-        width: 500px;
-        height: 780px;
+        width: 30%;
+        height: 80%;
         margin: 0 auto;
         display: flex;
         justify-content: center;
@@ -32,6 +32,22 @@
         width: 140px;
         font-size: 13px;
     }
+
+    #header{
+        padding-top: 20px;
+        padding-bottom: 50px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center;
+
+        color: #ffadad; font-family: 'Raleway',sans-serif;
+        font-size: 40px;
+        font-weight: 800;
+        line-height: 32px;
+        text-align: center;
+        text-transform: uppercase;
+    }
 }
 
 
@@ -54,6 +70,21 @@
     .section:last-child {
         background-color: rgba(102, 51, 153,0.5);
     }
+
+    #header {
+        position: absolute;
+        top: 10px;
+        left: 20px;
+        z-index: 1;
+        font-weight: 900;
+        font-size: 22px;
+
+        color: #f57979; font-family: 'Raleway',sans-serif;
+        line-height: 32px;
+        text-align: center;
+        text-transform: uppercase;
+        /*display: none;*/
+    }
 }
 
 .section {
@@ -69,7 +100,7 @@
 
 .section.active {
     transition: height 0.5s ease-in-out;
-    height: 670px;
+    height: 80%;
     flex-grow: 1;
     cursor: auto;
 }
@@ -100,8 +131,8 @@
 .section button{
     outline: none;
     border: none;
-    width: 23%;
-    height: 8%;
+    width: 27%;
+    height: 10%;
     border-radius: 15px;
     transition: scale 0.3s ease-in-out;
     font-weight: bold;
@@ -109,14 +140,6 @@
     cursor: pointer;
 }
 
-@keyframes buttonAnimation {
-    0%, 100% {
-        transform: scale(0.95);
-    }
-    50% {
-        transform: scale(1.05);
-    }
-}
 
 .section button {
     margin-top: 15px;
@@ -127,11 +150,13 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
+    transition: scale 0.3s ease-in-out;
 }
 
 .section button:hover {
-    animation: buttonAnimation 2s infinite;
+    scale: 1.05;
 }
+
 
 .section input {
     font-weight: bold;
@@ -158,7 +183,35 @@
 
 
 
+#buttons{
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+}
 
+.sign_with{
+    margin-top: 70px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: rgba(236, 236, 236, 0.67);
+    transition: background-color 0.2s ease-in-out;
+}
+#google_login{
+    background-image: url("../assets/google_icon.png");
+}
+#google_login:hover{
+    background-color: rgba(203, 203, 203, 0.67);
+}
 
+#apple_login{
+    background-image: url("../assets/apple_icon.png");
+}
+
+#apple_login:hover{
+    background-color: rgba(203, 203, 203, 0.67);
+}
 
 
