--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 @media (min-width: 1025px) {
-    .App{
+    .background{
         background-image: url("http://wallpaperswide.com/download/landscape_illustration-wallpaper-3440x1440.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -7,27 +7,11 @@
         height: 100vh;
         overflow: hidden;
     }
-
-    #header{
-        padding-top: 20px;
-        padding-bottom: 50px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center; /* Center horizontally */
-        align-items: center;
-
-        color: #ffadad; font-family: 'Raleway',sans-serif;
-        font-size: 40px;
-        font-weight: 800;
-        line-height: 32px;
-        text-align: center;
-        text-transform: uppercase;
-    }
 }
 
 
 @media (min-width: 10px) and (max-width: 1024px){
-    .App{
+    .background{
         background-image: url("../assets/background_mobile.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -35,20 +19,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-    }
-    #header {
-        position: absolute;
-        top: 10px;
-        left: 20px;
-        z-index: 1;
-        font-weight: 900;
-        font-size: 23px;
-
-        color: #f57979; font-family: 'Raleway',sans-serif;
-        line-height: 32px;
-        text-align: center;
-        text-transform: uppercase;
-        /*display: none;*/
     }
 }
 
