--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -1,14 +1,82 @@
-#circle_container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#home_main_box{
+    background-color: rgba(177, 172, 253, 0.21);
 }
 
 
-.progress-ring{
+.util{
+    position: absolute;
+    top: 0;
+
+    height: 45px;
+    width: 45px;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: none;
+    background-color: rgba(134, 134, 134, 0.4);
+    transition: all 0.3s ease-in-out;
+}
+.util:hover{
+    background-color: rgba(134, 134, 134, 0.79);
 
 }
+#log_out{
+    right: 0;
+    background-image: url("../assets/logout_button.png");
+    border-radius: 0 15px 0 15px;
+}
+#settings{
+    left: 0;
+    background-image: url("../assets/settings_icon.png");
+    border-radius: 15px 0 15px 0;
+}
 
+.svg_circle{
+    transition: all 0.5s ease-in-out;
+}
+
+.progress_ring{
+    rotate: -90deg;
+}
+
+#container{
+    position: relative;
+}
+
+#circle_label{
+    position: absolute;
+    top: 123px;
+    left: 105px;
+    font-size: 35px;
+    font-weight: 900;
+    font-family: 'Raleway',sans-serif;
+    user-select: none;
+    pointer-events: none;
+    color: ghostwhite;
+}
+
+.time_labels_div{
+    position: relative;
+    background-color: #1b67ef;
+
+}
 .time_labels{
+    position: absolute;
+    transition: all 0.5s;
+    width: 100px;
 
+    font-size: 20px;
+    font-weight: 800;
+
+    user-select: none;
+    pointer-events: none;
+}
+#start_time{
+    bottom: 0;
+    right: 4vw;
+}
+
+#end_time{
+    bottom: 0;
+    left: 4vw;
 }
