--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
         height: 80%;
         margin: 0 auto;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         flex-direction: column;
         border-radius: 30px;
