--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -10,10 +10,10 @@ button{
 
 @media (min-width: 1025px) {
     #log_out{
-        border-radius: 0 15px 0 15px;
+        border-radius: 0 25px 0 15px;
     }
     #settings{
-        border-radius: 15px 0 15px 0;
+        border-radius: 25px 0 15px 0;
     }
 }
 @media (min-width: 1px) and (max-width: 1024px){
@@ -186,7 +186,8 @@ button{
 .attendance_table {
     margin-right: 100px;
     width: 50%;
-    background-color: rgba(0, 255, 255, 0.63);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.38);
     border-radius: 20px;
 }
 
@@ -223,16 +224,120 @@ tr:nth-child(odd) {
 
 
 
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 20px;
+
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 
 
+#header_div, #table_div{
+    background-color: rgba(141, 141, 141, 0.52);
+    border-radius: 20px;
+}
+#header_div{
+    margin: 0 10px 0 10px;
+    border-radius: 20px 20px 0 0;
+}
 
+#table_div{
+    margin: 0 10px 10px 10px;
+    border-radius: 0 0 20px 20px;
+    height: 660px;
+    overflow: auto;
+}
+#table_div::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+#table{
+    width: 100%;
+    text-align: center;
+    overflow: scroll;
+    font-size: 18px;
+}
 
+th:first-child{
+    border-radius: 20px 0 0 0;
+}
+th:last-child{
+    border-radius: 0 20px 0 0;
+}
 
+.date{
+    width: 20%;
+}
+.times{
+    width: 60%;
+    padding: 10px;
+}
+.table_buttons{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 10px;
+}
 
+th{
+    background-color: rgba(120, 191, 255, 0.49);
+}
 
+tr:nth-child(odd){
+    background-color: rgba(136, 136, 136, 0.22);
+}
+tr:nth-child(even){
+    background-color: rgba(120, 191, 255, 0.49);
+}
 
+#comment_table, #absence_table{
+    height: 30px;
+    width: 30px;
+    border-radius: 15px;
+    border:none;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
+#comment_table{
+    background-image: url("../assets/add_comment_icon.png");
+}
+
+#absence_table{
+    background-image: url("../assets/abscence_icon.png");
+}
 
 
 
