--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,9 @@
         backdrop-filter: blur(10px);
     }
     .background{
-        background-image: url("http://wallpaperswide.com/download/landscape_illustration-wallpaper-3440x1440.jpg");
+        background-image: url("../assets/output-onlinepngtools.png");
+        /*background-image: url("http://wallpaperswide.com/download/landscape_illustration-wallpaper-3440x1440.jpg");*/
+
         background-size: cover;
         background-repeat: no-repeat;
         width: 100vw;
@@ -45,7 +47,7 @@
     }
 
     .background{
-        background-image: url("../assets/background_mobile.jpg");
+        background-image: url("../assets/background_test.png");
         background-size: cover;
         background-repeat: no-repeat;
         display: flex;
