--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -15,7 +15,45 @@ button{
     #settings{
         border-radius: 25px 0 15px 0;
     }
+    .attendance_table{
+        margin-right: 100px;
+        width: 50%;
+        border-radius: 20px;
+    }
+
+
+    #header_div, #table_div{
+        background-color: rgba(141, 141, 141, 0.52);
+        border-radius: 20px;
+    }
+    #header_div{
+        margin: 0 10px 0 10px;
+        border-radius: 20px 20px 0 0;
+    }
+
+    #table_div{
+        height: 660px;
+        overflow: auto;
+        margin: 0 10px 10px 10px;
+        border-radius: 0 0 20px 20px;
+    }
+
+    .date{
+        width: 20%;
+    }
+    .times{
+        width: 60%;
+        padding: 10px;
+    }
+
+    th:first-child{
+        border-radius: 20px 0 0 0;
+    }
+    th:last-child{
+        border-radius: 0 20px 0 0;
+    }
 }
+
 @media (min-width: 1px) and (max-width: 1024px){
     #log_out{
         border-radius: 0 0 0 15px;
@@ -23,7 +61,33 @@ button{
     #settings{
         border-radius:  0 0 15px 0;
     }
+    #table_div{
+        overflow: auto;
+    }
+    *::-webkit-scrollbar {
+        display: none;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+
+    .date{
+        width: 26%;
+    }
+    .times{
+        width: 47%;
+        padding: 10px;
+    }
+    .container{
+        width: 100%;
+        height: 100%;
+    }
+    .attendance_table{
+        width: 100%;
+    }
 }
+
+
+
 .util{
     position: absolute;
     top: 0;
@@ -184,11 +248,8 @@ button{
 }
 
 .attendance_table {
-    margin-right: 100px;
-    width: 50%;
     backdrop-filter: blur(10px);
     background-color: rgba(255, 255, 255, 0.38);
-    border-radius: 20px;
 }
 
 #table_exit_button{
@@ -263,21 +324,11 @@ tr:nth-child(odd) {
 
 
 
-#header_div, #table_div{
-    background-color: rgba(141, 141, 141, 0.52);
-    border-radius: 20px;
-}
-#header_div{
-    margin: 0 10px 0 10px;
-    border-radius: 20px 20px 0 0;
-}
 
-#table_div{
-    margin: 0 10px 10px 10px;
-    border-radius: 0 0 20px 20px;
-    height: 660px;
-    overflow: auto;
-}
+
+
+
+
 #table_div::-webkit-scrollbar {
     display: none;
     -ms-overflow-style: none;
@@ -290,20 +341,6 @@ tr:nth-child(odd) {
     font-size: 18px;
 }
 
-th:first-child{
-    border-radius: 20px 0 0 0;
-}
-th:last-child{
-    border-radius: 0 20px 0 0;
-}
-
-.date{
-    width: 20%;
-}
-.times{
-    width: 60%;
-    padding: 10px;
-}
 .table_buttons{
     display: flex;
     justify-content: center;
@@ -338,6 +375,50 @@ tr:nth-child(even){
 #absence_table{
     background-image: url("../assets/abscence_icon.png");
 }
+
+
+#dropdown{
+    text-align: center;
+    border: none;
+    user-focus: none;
+    width: 70%;
+    height: 30px;
+    -webkit-appearance: none;
+    background-color: transparent;
+    font-size: 18px;
+
+}
+
+#dropdown:focus {
+    outline: none;
+}
+
+#dropdown option{
+    font-size: 18px;
+    background-color: #c25d5d;
+}
+
+#dropdown::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
