--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -69,7 +69,9 @@ button{
         -ms-overflow-style: none;
         scrollbar-width: none;
     }
-
+    .main_box{
+        overflow: hidden;
+    }
     .date{
         width: 26%;
     }
@@ -79,14 +81,15 @@ button{
     }
     .container{
         width: 100%;
-        height: 100%;
     }
     .attendance_table{
         width: 100%;
     }
 }
 
-
+.times{
+    overflow-block: visible;
+}
 
 .util{
     position: absolute;
@@ -141,6 +144,51 @@ button{
 #comment{
     background-image: url("../assets/add_comment_icon.png");
 }
+
+
+.modal {
+    padding: 100px 0 0 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.27);
+    backdrop-filter: blur(2px);
+}
+
+.modal-content {
+    backdrop-filter: blur(10px);
+
+    background-color: rgba(255, 255, 255, 0.94);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 20px;
+    text-align: center;
+}
+
+
+textarea{
+    resize: none;
+    border-radius: 15px;
+    user-focus: none;
+    padding: 10px;
+    font-size: 20px;
+    background-color: rgba(194, 194, 194, 0.33);
+
+
+    height: 100px;
+    width: 90%;
+}
+textarea:focus{
+    outline: none;
+}
+
 #absence{
     background-image: url("../assets/abscence_icon.png");
 }
@@ -283,30 +331,6 @@ tr:nth-child(odd) {
 }
 
 
-
-
-.modal {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 20px;
-
-}
-
 .close {
     color: #aaa;
     float: right;
@@ -379,14 +403,14 @@ tr:nth-child(even){
 
 #dropdown{
     text-align: center;
-    border: none;
+    border: 1px solid black;
     user-focus: none;
-    width: 70%;
+    width: 80%;
     height: 30px;
     -webkit-appearance: none;
     background-color: transparent;
     font-size: 18px;
-
+    border-radius: 10px;
 }
 
 #dropdown:focus {
@@ -395,7 +419,7 @@ tr:nth-child(even){
 
 #dropdown option{
     font-size: 18px;
-    background-color: #c25d5d;
+    background-color: rgba(161, 161, 161, 0.4);
 }
 
 #dropdown::-webkit-scrollbar {
@@ -407,19 +431,36 @@ tr:nth-child(even){
 
 
 
+.loader {
+    margin: 0 auto;
+    width: 64px;
+    height: 64px;
+    position: relative;
+}
 
+.loader:before {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    border: 4px solid #ff7d92;
+    border-radius: 50%;
+    border-top-color: transparent;
+    animation: spin 1s linear infinite;
+    transform: translate(-50%, -50%);
+}
 
-
-
-
-
-
-
-
-
-
-
-
+@keyframes spin {
+    0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
 
 
 
