--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -93,6 +93,9 @@ button{
     .modal-content {
         width: 70%;
     }
+    #dropdown{
+        border: 1px solid black;
+    }
 }
 
 
@@ -415,7 +418,6 @@ tr:nth-child(even){
 
 #dropdown{
     text-align: center;
-    border: 1px solid black;
     user-focus: none;
     width: 80%;
     height: 30px;
@@ -443,36 +445,71 @@ tr:nth-child(even){
 
 
 
-.loader {
-    margin: 0 auto;
-    width: 64px;
-    height: 64px;
+/*.loader {*/
+/*    margin: 0 auto;*/
+/*    width: 64px;*/
+/*    height: 64px;*/
+/*    position: relative;*/
+/*}*/
+
+/*.loader:before {*/
+/*    content: '';*/
+/*    box-sizing: border-box;*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    border: 4px solid #ff7d92;*/
+/*    border-radius: 50%;*/
+/*    border-top-color: transparent;*/
+/*    animation: spin 1s linear infinite;*/
+/*    transform: translate(-50%, -50%);*/
+/*}*/
+
+/*@keyframes spin {*/
+/*    0% {*/
+/*        transform: translate(-50%, -50%) rotate(0deg);*/
+/*    }*/
+/*    100% {*/
+/*        transform: translate(-50%, -50%) rotate(360deg);*/
+/*    }*/
+/*}*/
+
+
+
+
+
+
+
+.lds-hourglass {
+    display: inline-block;
     position: relative;
+    width: 80px;
+    height: 80px;
 }
-
-.loader:before {
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 50px;
-    height: 50px;
-    border: 4px solid #ff7d92;
+.lds-hourglass:after {
+    content: " ";
+    display: block;
     border-radius: 50%;
-    border-top-color: transparent;
-    animation: spin 1s linear infinite;
-    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    margin: 8px;
+    box-sizing: border-box;
+    border: 32px solid #fff;
+    border-color: rgba(255, 7, 72, 0.91) transparent rgba(255, 7, 72, 0.91) transparent;
+    animation: lds-hourglass 1.2s infinite;
 }
-
-@keyframes spin {
+@keyframes lds-hourglass {
     0% {
-        transform: translate(-50%, -50%) rotate(0deg);
+        transform: rotate(0);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+        transform: rotate(900deg);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     }
     100% {
-        transform: translate(-50%, -50%) rotate(360deg);
+        transform: rotate(1800deg);
     }
 }
-
-
-
