--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -161,7 +161,7 @@ button{
 
 
 .modal {
-    padding: 100px 0 0 0;
+    padding: 50px 0 0 0;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -175,16 +175,14 @@ button{
 }
 .modal-content {
     backdrop-filter: blur(10px);
-
+    padding: 0 10px 10px 0 ;
     background-color: rgba(255, 255, 255, 0.94);
     margin: 15% auto;
-    padding: 20px;
     border: 1px solid #888;
     max-width: 600px;
     border-radius: 20px;
     text-align: center;
     overflow-block: visible;
-
 }
 
 
@@ -443,46 +441,9 @@ tr:nth-child(even){
 }
 
 
-
-
-/*.loader {*/
-/*    margin: 0 auto;*/
-/*    width: 64px;*/
-/*    height: 64px;*/
-/*    position: relative;*/
-/*}*/
-
-/*.loader:before {*/
-/*    content: '';*/
-/*    box-sizing: border-box;*/
-/*    position: absolute;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    width: 50px;*/
-/*    height: 50px;*/
-/*    border: 4px solid #ff7d92;*/
-/*    border-radius: 50%;*/
-/*    border-top-color: transparent;*/
-/*    animation: spin 1s linear infinite;*/
-/*    transform: translate(-50%, -50%);*/
-/*}*/
-
-/*@keyframes spin {*/
-/*    0% {*/
-/*        transform: translate(-50%, -50%) rotate(0deg);*/
-/*    }*/
-/*    100% {*/
-/*        transform: translate(-50%, -50%) rotate(360deg);*/
-/*    }*/
-/*}*/
-
-
-
-
-
-
-
 .lds-hourglass {
+    padding: 60px;
+
     display: inline-block;
     position: relative;
     width: 80px;
