--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -57,20 +57,10 @@
         flex-direction: column;
         overflow: hidden;
     }
-
-    #header {
-        position: absolute;
-        top: 17px;
-        left: 8%;
-        justify-content: center;
-        z-index: 1;
-        font-weight: 900;
-        font-size: 22px;
-    }
 }
 
 
-#header{
+#header_login, #header_home{
     color: #ffadad;
     font-family: 'Raleway',sans-serif;
     text-transform: uppercase;
@@ -80,6 +70,20 @@
     pointer-events: none;
 }
 
+/* Styles for the bottom bar */
+.bottom-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.67);
+    color: #fff;
+    padding: 5px 0 5px 30px;
+}
 
+/* Styles for the text inside the bottom bar */
+.bottom-bar span {
+    font-size: 18px;
+}
 
 
