--- a/src/styles/Login_screen_style.css
+++ b/src/styles/Login_screen_style.css
@@ -31,6 +31,16 @@
     .section:last-child {
         background-color: rgba(102, 51, 153,0.5);
     }
+    #header_login {
+        position: absolute;
+        top: 10px;
+        left: 5%;
+        justify-content: center;
+        z-index: 1;
+        font-weight: 900;
+        font-size: 22px;
+        overflow: auto;
+    }
 }
 
 .section {
@@ -77,7 +87,7 @@
 }
 
 
-.section button, .modal-content button {
+.section button, .modal-content button{
     outline: none;
     border: none;
     border-radius: 15px;
@@ -149,3 +159,6 @@
 #apple_login{
     background-image: url("../assets/apple_icon.png");
 }
+
+
+
