--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,7 +37,7 @@
 @media (min-width: 1px) and (max-width: 1024px){
     .main_box {
         width: 100vw;
-        height: 100vh;
+        height: 100%;
         /*height: 97.6vh;*/
         display: flex;
         margin: 0 auto;
@@ -56,6 +56,7 @@
         align-items: center;
         flex-direction: column;
         overflow: hidden;
+        height: 100vh;
     }
 }
 
