--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,7 +56,7 @@
         align-items: center;
         flex-direction: column;
         overflow: hidden;
-        height: 100vh;
+        height: 100%;
     }
 }
 
