--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,7 +55,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        overflow: hidden;
+        overflow: auto;
         height: 100%;
     }
 }
