--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,8 +55,9 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        overflow: auto;
-        height: 100%;
+        overflow: auto;     /* was on hidden */
+        /*height: 100%;       !* was on 100vh *!*/
+        /*width:100%;*/
     }
 }
 
