--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,14 +49,14 @@
 
     .background{
         background-image: url("../assets/mobile_background.png");
-        background-size: cover;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         overflow: auto;     /* was on hidden */
-        /*height: 100%;       !* was on 100vh *!*/
+        height: 93vh;       /* was on 100vh */
         /*width:100%;*/
     }
 }
