--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,7 +37,8 @@
 @media (min-width: 1px) and (max-width: 1024px){
     .main_box {
         width: 100vw;
-        height: 100%;
+        height: 100vh;
+        position: fixed;
         /*height: 97.6vh;*/
         display: flex;
         margin: 0 auto;
@@ -49,15 +50,15 @@
 
     .background{
         background-image: url("../assets/mobile_background.png");
-        background-size: 100% 100%;
+        background-size: cover;
         background-repeat: no-repeat;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        overflow: auto;     /* was on hidden */
-        height: 93vh;       /* was on 100vh */
-        /*width:100%;*/
+        overflow: auto;
+        height: 100%;
+        width: 100%;
     }
 }
 
