--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,7 +56,7 @@
         align-items: center;
         flex-direction: column;
         overflow: auto;
-        height: 89vh;
+        height: 100%;
         width: 100%;
     }
 }
