--- a/src/styles/Home_screen_style.css
+++ b/src/styles/Home_screen_style.css
@@ -3,6 +3,8 @@
     font-weight: 800;
     user-select: none;
     padding-bottom: 20px;
+    width: 100%;
+    height: 100%;
 }
 button{
     cursor: pointer;
