--- a/src/styles/Login_screen_style.css
+++ b/src/styles/Login_screen_style.css
@@ -1,59 +1,57 @@
 @media (min-width: 1025px){
     .section:first-child {
         border-radius: 30px 30px 0 0;
-        background-color: rgba(127, 255, 212,0.5);
     }
     .section:last-child {
         border-radius:  0 0 30px 30px;
-        background-color: rgba(102, 51, 153,0.5);
-    }
-
-    #errorMessage{
-        position: absolute;
-        right: 7.5%;
-        top: 42px;
-        padding: 5px;
-        border: 1px solid red;
-        background-color: rgba(255, 230, 230, 0.55);
-        color: red;
-        border-radius: 0 10px 10px 10px;
-        width: 200px;
-        font-size: 13px;
     }
 }
-
 
 @media (min-width: 1px) and (max-width: 1024px) {
     .section:first-child {
         padding-top: 60px;
-        background-color: rgba(127, 255, 212,0.5);
-    }
-    .section:last-child {
-        background-color: rgba(102, 51, 153,0.5);
+
     }
 }
 
+.section:first-child{
+    background-color: rgba(198, 198, 198, 0.6);
+}
+.section:last-child {
+    background-color: rgba(44, 44, 44, 0.6);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.section::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
 .section {
-    flex-grow: 1;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.section {
     font-weight: bold;
     font-size: 16px;
     width: 100%;
     text-align: center;
     cursor: pointer;
-    background-color: rgba(100, 149, 237, 0.27);
-    overflow: hidden;
+    background-color: rgba(126, 126, 126, 0.6);
+    /*overflow: hidden;*/
+    overflow: auto;
 }
 
 .section.active {
     transition: height 0.5s ease-in-out;
-    height: 76%;
+    height: 75%;
     flex-grow: 1;
     cursor: auto;
 }
 
 .section:not(.active) {
     transition: height 0.5s ease-in-out;
-    height: 6%;
+    height: 10%;
 }
 
 .section p, .section a{
@@ -66,12 +64,13 @@
 }
 
 .section a{
-    margin: 20px 40px 5px 30px;
+    margin: 40px 40px 10px 20%;
     display: flex;
     justify-content: left;
 }
 
-.section button, .modal-content button{
+
+.section button, .modal-content button, .reset_container button{
     outline: none;
     border: none;
     border-radius: 15px;
@@ -82,6 +81,9 @@
     padding: 10px 20px;
     background-color: #2196f3;
     color: white;
+}
+
+.section button, .modal-content button{
     font-size: 14px;
     cursor: pointer;
     font-weight: bold;
@@ -95,11 +97,11 @@
 .section input ,.modal-content input{
     font-weight: bold;
     font-size: 15px;
-    padding-left: 20px;
-    height: 40px;
+    height: 35px;
     outline: none;
     border: none;
-    width: 80%;
+    padding: 5px 0 5px 15px;
+    width: 60%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     background-color: rgba(255, 255, 255, 0.78);
@@ -107,11 +109,6 @@
 
 #input_container{
     position: relative;
-}
-
-#errorMessage{
-    color: #ff3e3e;
-    font-size: 14px;
 }
 
 #buttons{
