--- a/src/styles/Login_screen_style.css
+++ b/src/styles/Login_screen_style.css
@@ -1,3 +1,14 @@
+:root {
+    /*sections*/
+    --section1: rgba(193, 255, 203, 0.3);
+    --section2: rgba(112, 145, 119, 0.4);
+    --section3: rgba(64, 83, 67, 0.5);
+
+    /*colors*/
+    --primary: #cacaca;
+    --text-primary: rgb(0, 0, 0);
+}
+
 @media (min-width: 1025px){
     .section:first-child {
         border-radius: 30px 30px 0 0;
@@ -15,10 +26,10 @@
 }
 
 .section:first-child{
-    background-color: rgba(198, 198, 198, 0.6);
+    background-color: var(--section1);
 }
 .section:last-child {
-    background-color: rgba(44, 44, 44, 0.6);
+    background-color: var(--section3);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -37,7 +48,7 @@
     width: 100%;
     text-align: center;
     cursor: pointer;
-    background-color: rgba(126, 126, 126, 0.6);
+    background-color: var(--section2);
     /*overflow: hidden;*/
     overflow: auto;
 }
@@ -57,10 +68,8 @@
 .section p, .section a{
     user-select: none;
     font-weight: bold;
-}
-
-.section p {
-    font-size: 21px;
+    color: var(--text-primary);
+    font-size: 17px;
 }
 
 .section a{
@@ -68,7 +77,6 @@
     display: flex;
     justify-content: left;
 }
-
 
 .section button, .modal-content button, .reset_container button{
     outline: none;
